Closed
Bug 1497910
Opened 7 years ago
Closed 7 years ago
Firefox flickers white while starting
Categories
(Core :: Graphics: WebRender, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla64
| Tracking | Status | |
|---|---|---|
| firefox64 | --- | fixed |
People
(Reporter: jrmuizel, Assigned: sotaro, NeedInfo)
References
Details
Attachments
(1 file, 4 obsolete files)
|
11.00 KB,
patch
|
nical
:
review+
|
Details | Diff | Splinter Review |
During startup the Firefox window will be white then it draws something then goes all white before finally drawing again. I've been seeing this for a while.
| Reporter | ||
Updated•7 years ago
|
Flags: needinfo?(sotaro.ikeda.g)
| Assignee | ||
Comment 2•7 years ago
|
||
I saw it this week, but I could not reproduce it with latest nightly today.
Flags: needinfo?(sotaro.ikeda.g)
| Reporter | ||
Comment 3•7 years ago
|
||
I think this might only happen on the first load after updating. Perhaps shader cache related?
| Assignee | ||
Comment 4•7 years ago
|
||
Yea, I confirmed it during first load after updating. But it is not clear if shader cache is related. Just reset shader disk cache and restart Firefox did not cause the problem.
| Reporter | ||
Updated•7 years ago
|
Blocks: stage-wr-trains
Priority: -- → P2
| Assignee | ||
Comment 5•7 years ago
|
||
Ah, it seems like to related to gfx/SanityTest.js. I confirmed the problem on P50(Win10) with the following STR.
[STR]
[1] Enable WebRender by setting pref gfx.webrender.all;true.
[2] Reset pref sanity-test.advanced-layers.
[3] Restart firefox
| Assignee | ||
Updated•7 years ago
|
Assignee: nobody → sotaro.ikeda.g
| Assignee | ||
Comment 6•7 years ago
|
||
(In reply to Sotaro Ikeda [:sotaro] from comment #5)
> Ah, it seems like to related to gfx/SanityTest.js. I confirmed the problem
> on P50(Win10) with the following STR.
>
> [STR]
> [1] Enable WebRender by setting pref gfx.webrender.all;true.
> [2] Reset pref sanity-test.advanced-layers.
> [3] Restart firefox
We also enable WebRender profiler ui. Somehow Bug 1436020 does not work anymore now.
| Assignee | ||
Comment 7•7 years ago
|
||
WebRenderBridgeParent::RecvGetSnapshot() seemed to readback obsoleted data. RendererOGL::UpdateAndRender() disables debug flags during readback, but readback data had wr profile ui.
| Assignee | ||
Comment 8•7 years ago
|
||
It seems that wr_renderer_readback() needs to be called before calling RenderCompositorANGLE::EndFrame() during readback.
| Comment hidden (obsolete) |
| Comment hidden (obsolete) |
| Comment hidden (obsolete) |
| Comment hidden (obsolete) |
| Assignee | ||
Comment 13•7 years ago
|
||
| Assignee | ||
Comment 14•7 years ago
|
||
Attachment #9017371 -
Attachment is obsolete: true
| Assignee | ||
Comment 15•7 years ago
|
||
With attachment 9017379 [details] [diff] [review] and enabled dump of gfxUtils::WriteAsPNG(snapshot, filename) in WebRenderLayerManager::MakeSnapshotIfRequired(), I did not saw profiler ui in the snapshot.
https://dxr.mozilla.org/mozilla-central/source/gfx/layers/wr/WebRenderLayerManager.cpp#436
| Assignee | ||
Updated•7 years ago
|
Attachment #9017379 -
Flags: review?(nical.bugzilla)
Updated•7 years ago
|
Attachment #9017379 -
Flags: review?(nical.bugzilla) → review+
Comment 16•7 years ago
|
||
Pushed by sikeda@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/52a35a1526e7
Call wr_renderer_readback() before calling RenderCompositor::EndFrame() r=nical
Comment 17•7 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla64
You need to log in
before you can comment on or make changes to this bug.
Description
•