Bug 1497910 - Call wr_renderer_readback() before calling RenderCompositor::EndFrame() r=nical